# tradingEngine

./: 00_START_HERE.md  ARCHITECTURE_SUMMARY.md  BENCHMARK_COMPLETE.md  Cargo.toml  DELIVERABLES.md  Dockerfile  FINAL_BENCHMARK_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_INDEX.md  MIGRATION_SUMMARY_FINAL.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_STATUS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  README_DOCUMENTATION.md  START_HERE.md  VERIFICATION_REPORT.md
src/: engine.rs  main.rs
src/order_matching_engine/: engine.rs  mod.rs  orderbook.rs
src/order_matching_engine/testing/: benchmark.rs  correctness_tests.rs  mod.rs  tests.rs
