[package]
name = "tradingEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
